<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_One">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-3dp"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="55.944"
        mapbox:mapbox_cameraTargetLng="-3.188396"
        mapbox:mapbox_cameraZoom="15"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10">


    </com.mapbox.mapboxsdk.maps.MapView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:background="#8affffff" />


    <ImageView
        android:id="@+id/dolr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/dolr"
        android:layout_marginTop="5dp"
        android:layout_marginStart="13dp"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/valueofdolr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dolr"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="0.0"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/peny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/peny"
        android:layout_marginTop="5dp"
        android:layout_below="@id/dolr"
        android:layout_marginStart="13dp"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/valueofpeny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/peny"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="10dp"
        android:text="0.0"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/quid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/quid"
        android:layout_marginTop="5dp"
        android:layout_below="@id/peny"
        android:layout_marginStart="13dp"
        android:visibility="visible" />
    <TextView
        android:id="@+id/valueofquid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/quid"
        android:layout_marginTop="73dp"
        android:layout_marginLeft="10dp"
        android:text="0.0"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/shil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/shil"
        android:layout_marginTop="5dp"
        android:layout_below="@id/quid"
        android:layout_marginStart="13dp"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/valueofshil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/shil"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="10dp"
        android:text="0.0"
        android:visibility="visible"/>



    <Button
        android:id="@+id/navigation_button"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button2"
        android:drawableTop="@drawable/baseline_directions_white_18dp"
        android:enabled="false"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorPrimaryDark"
        android:visibility="visible"
        mapbox:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        mapbox:layout_constraintEnd_toEndOf="@+id/mapView"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:animateLayoutChanges="true">

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        app:itemBackground="@color/mapboxWhite"
        app:menu="@menu/navigation"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="1.0">

    </android.support.design.widget.BottomNavigationView>


</RelativeLayout>